--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -17,6 +17,20 @@ Vestibulum consectetur nec urna a luctus.
 Quisque pharetra tristique arcu fringilla dapibus.
 https://example.org[Curabitur,role=unresolved] ut massa aliquam, cursus enim et, accumsan lectus.
 
+== MathJax
+
+This is the solution of a famous equation
+
+\begin{array}{c} {x = \frac{{ - b \pm \sqrt {b^2 - 4ac} }}{{2a}}} & when & {ax^2 + bx + c = 0} \end{array}
+
+== Icons
+
+Big heart: icon:heart[size=2x]
+
+Tags: icon:tags[role="blue"]
+
+Bolt: icon:bolt[fw]
+
 == Cu solet
 
 Nominavi luptatum eos, an vim hinc philosophia intellegebat.
